# airdance

./: .gitignore  README.md
analysis-python/: main.py
data-collector-cpp/: CMakeLists.txt  ad
data-collector-cpp/CPM_modules/: FindJoyShockLibrary.cmake
data-collector-cpp/include/: Student.h
data-collector-cpp/src/: Student.cpp  main.cpp
